# RetoSemana1

./: .gitignore  README.md  data.csv  frames.gv
src/puzzlebot_control/config/: puzzlebot_control.yaml  puzzlebot_diff_control.yaml
src/puzzlebot_control/launch/: puzzlebot_control.launch
src/puzzlebot_control/src/: puzzlebot_control_node.cpp
src/puzzlebot_gazebo/config_files/: robot_example.rviz
src/puzzlebot_gazebo/src/: tf_map.py
src/puzzlebot_gazebo/urdf/: parameters.xacro  puzzlebot.gazebo  puzzlebot.xacro  puzzlebot_mod.xacro
src/puzzlebot_sim/: CMakeLists.txt  package.xml  setup.py
src/puzzlebot_sim/launch/: aruco_detection.launch  bots.launch  laptop.launch  obstacle_world.launch  sim.launch  simple_world.launch  single_bot.launch  test.launch  week1.launch  week2.launch  week4.launch  week6.launch
src/puzzlebot_sim/launch/world_launch/: aruco_world.launch  obstacle_world.launch  simple_world.launch
src/puzzlebot_sim/puzzlebot_rviz/: lidar_rviz_scan.rviz  robot_sim.rviz  rviz_robot_sim.rviz  week6.rviz
src/puzzlebot_sim/scripts/: teleop_twist_keyboard.py  testmath.py
src/puzzlebot_sim/src/: bug0.py  bug2.py  data.csv  data_gathering.py  kalman_filter.py  kinematic_model.py  lidar_transfrom.py  marker_transform.py  markers_show.cpp  odom.py  odom_v2.py  odom_v3.py
src/puzzlebot_sim/srv/: KalmanFilter.srv  SetGoal.srv
src/puzzlebot_world/launch/: puzzlebot_tec_last_world.launch  puzzlebot_tec_simple_world.launch
src/puzzlebot_world/models/arucos/materials/scripts/: tag0.material  tag1.material  tag2.material
src/puzzlebot_world/worlds/: arucos.world  track.world
